--- a/lib/generators/likelion/templates/160408/home.index.html.erb
+++ b/lib/generators/likelion/templates/160408/home.index.html.erb
@@ -7,7 +7,7 @@
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1">글 내용</label>
-      <textarea name="content" class="form-control" id="exampleInputPassword1">
+      <textarea name="content" class="form-control" id="exampleInputPassword1"></textarea>
     </div>
     <button type="submit" class="btn btn-default">전송완료</button>
   </form>
